# tiBackupUi

./: .gitlab-ci.yml  CMakeLists.txt  README.md  deploy_release.sh  deploy_release_qt5.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resui.qrc  run_release.sh  tiBackupUi-pkexec  tiBackupUi.pro  tibackupadd.cpp  tibackupadd.h  tibackupadd.ui  tibackupedit.cpp  tibackupedit.h  tibackupedit.ui  tipreferences.cpp  tipreferences.h  tipreferences.ui
.github/workflows/: build.yml  deb.yml
app-entry/: tibackupui-admin.desktop  tibackupui.desktop
debian/: changelog  control  rules
policykit/: net.iksdeh.pkexec.tibackup.policy  net.iksdeh.pkexec.tibackupui.policy
tools/: pbseditor.cpp  pbseditor.h  pbseditor.ui  pbsmanager.cpp  pbsmanager.h  pbsmanager.ui  scripteditor.cpp  scripteditor.h  scripteditor.ui  taskplaner.cpp  taskplaner.h  taskplaner.ui
workers/: tibackupjobworker.cpp  tibackupjobworker.h
